# android-reverse-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: repository-metadata.json
docker/: ghidra-sidecar-entrypoint.sh  ghidra-sidecar.Dockerfile  ida-sidecar-entrypoint.sh  ida-sidecar.Dockerfile
docs/: single-apk-agent-workflow.md
ida-sidecar/: Dockerfile  entrypoint.sh
java-backend/: pom.xml
java-backend/src/main/java/mcp/jadx/: AnalyzerService.java  HeadlessJadxBackend.java
scripts/: apply_github_metadata.py  apply_github_metadata.sh  run-docker.sh  run-ghidra-sidecar.sh  run-ghidra.sh  run-ida-sidecar.sh  run-ida.sh
src/android_reverse_mcp/: backend_client.py  server.py  workspace.py
src/android_reverse_mcp/modules/: apktool.py  commands.py  diff_tool.py  ghidra_bridge.py  ida_bridge.py  sign_tools.py
src/android_reverse_mcp/native_backends/: __init__.py  base.py  bridge.py  client.py  ghidra.py  ida.py
src/headless_jadx_mcp/: __init__.py  backend_client.py  server.py  workspace.py
src/headless_jadx_mcp/modules/: __init__.py  apktool.py  commands.py  diff_tool.py  sign_tools.py
tests/: test_native_backend_adapters.py  test_native_backend_bridge.py  test_native_backend_client.py  test_server_native_tools.py
